src/test/deca/context/invalid/intermediaire2/elseif/04condition_readfloat.deca
// Description:
// Test de la condition du else if, que readFloat() marche pas.
//
// Resultats:
//  04condition_readfloat.deca:12:16:
//
// Historique:
//    crée le 10/06/2022
{
    if (3 < 2) {
        print("3 < 2");
    } else if ( readFloat() ){
        print("!(3 < 2) && readFloat()");
    }
}